<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimplePlayer</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="file_select">open</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="show_text">here</string>
    <string name="player_start">start</string>
    <string name="player_pause">pause</string>
    <string name="player_resume">resume</string>
    <string name="player_stop">stop</string>
</resources>
